# glider_project

./: .gitmodules  CMakeLists.txt  main.cpp
include/importer/: importer.cpp
models/: glider.mtl
shaders/: cloudFrag.glsl  cloudVert.glsl  frag.glsl  vert.glsl
web/: index.html
